--- a/style.css
+++ b/style.css
@@ -410,6 +410,10 @@ div button:hover{
     .footer-contact p {
         margin-bottom: 15px;
     }
+
+    h1 {
+        font-size: 1.8rem; /* Smaller font size for smaller screens */
+    }
 }
 
 /* Contact section styling */
