--- a/style.css
+++ b/style.css
@@ -512,7 +512,7 @@ div button:hover{
     }
 
     .contact-info, .contact-form {
-        width: 100%;
+        width: 460px;
         margin-bottom: 40px;
     }
 }
