--- a/style.css
+++ b/style.css
@@ -411,7 +411,7 @@ div button:hover{
         margin-bottom: 15px;
     }
 
-    h1 {
+    .container h1 {
         font-size: 1.8rem; /* Smaller font size for smaller screens */
     }
 }
